date swagger to util.Date - returning score of product
